# devin-gen-expeta

./: .gitignore  README.md  clarifier_report.json  directories_structure.txt  integration_tests.py  orchestrator.py  pyproject.toml  test_enhanced_clarifier.py  test_mvp.py
.cursor/rules/: my-rule.mdc
access/chat/: expectations.yaml
access/cli/: expectations.yaml
access/graphql/: expectations.yaml
access/rest_api/: expectations.yaml
access/ui/: README.md  expectations.yaml  package-lock.json  package.json
access/ui/src/: App.js  (+8 more)
api_gateway/: auth_manager.py  expectations.yaml  request_router.py  response_formatter.py
clarifier/: clarifier.py
deployment/: BLOG_DEPLOYMENT_RECORD.md  BLOG_GENERATION_PROCESS.md  app.py  deploy_blog.py  record_blog_generation.py
deployment/data/: blog_posts.json  portfolio_items.json
deployment/templates/: about.html  blog.html  blog_post.html  contact.html  index.html  portfolio.html  portfolio_item.html
docs/: STEP_BY_STEP_GUIDE.md  mvp_implementation_plan.md  usage_guide_zh.md
enhanced_clarifier/: __init__.py  enhanced_clarifier.py
event_system/: event_bus.py  expectations.yaml  registry.py
event_system/handlers/: __init__.py  base_handler.py
generator/: code_generator.py  generator.py  mock_generator.py
llm_router/: llm_router.py
llm_router/providers/: anthropic_provider.py  local_provider.py  mock_provider.py  openai_provider.py
memory/: memory_system.py
memory/storage/: __init__.py  file_storage.py
orchestrator/: __init__.py  _mock_data.py  api.py  expectations.yaml  orchestrator.py  system_monitor.py  task_manager.py  workflow_engine.py
scripts/: generate_access_layer.py
semantic_mediator/: __init__.py  mediator.py
tests/: README.md  create_test_data.py  debug_storage.py  direct_chat_test.py  functional_test.js  integration_test.js  integration_test.py  package-lock.json  package.json  record_integration_test.py  test_chat_api.py  ui_integration_test.py
tests/access/: test_chat.py  test_cli.py  test_graphql.py  test_integration.py  test_real_llm_integration.py  test_rest_api.py  test_ui.js
tests/api_gateway/: test_auth_manager.py  test_request_router.py  test_response_formatter.py
tests/clarifier/: mock_llm_router.py  test_recovery.py
tests/event_system/: test_base_handler.py  test_event_bus.py  test_registry.py
utils/: env_loader.py  token_tracker.py
validator/: test_system.py  validator.py
(+68 files in other folders)
