[tool.poetry]
name = "expeta"
version = "0.1.0"
description = "Expeta 2.0 - A semantic-driven software development system"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
requests = "^2.31.0"
openai = "^1.0.0"
anthropic = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
