[tool.poetry]
name = "devin-gen-expeta"
version = "0.1.0"
description = "Expeta 2.0 - A semantic-driven software development system"
authors = ["ZIYAN ZHOU"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
requests = "^2.31.0"
openai = "^1.0.0"
anthropic = "^0.5.0"
fastapi = "==0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.0.0"
graphql-core = "^3.2.6"
starlette = ">=0.36.3,<0.37.0"
graphene = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
