[tool.poetry]
name = "devin-gen-expeta"
version = "0.1.0"
description = "Expeta 2.0 - Semantic-Driven Software Development"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "access" },
    { include = "clarifier" },
    { include = "generator" },
    { include = "validator" },
    { include = "memory" },
    { include = "llm_router" },
    { include = "semantic_mediator" },
    { include = "utils" },
    { include = "orchestrator" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
anthropic = "^0.7.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
pyyaml = "^6.0.1"
graphene = "^3.3"
starlette = "^0.27.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
